--- a/env/Vagrantfile
+++ b/env/Vagrantfile
@@ -40,6 +40,7 @@ Vagrant.configure("2") do |config|
                   sudo apt-get update
                   sudo apt-get install php5-dev libpcre3-dev gcc make php5-mysql -y
                   cd /home/vagrant; mkdir -p phalcon; cd phalcon;
+
                   git clone --depth=1 git://github.com/phalcon/cphalcon.git
                   cd cphalcon/build
                   sudo ./install
@@ -48,9 +49,16 @@ Vagrant.configure("2") do |config|
                   sudo touch /etc/php5/apache2/conf.d/30-phalcon.ini
                   echo "extension=phalcon.so" >> /etc/php5/apache2/conf.d/30-phalcon.ini
 
+                  sudo touch /etc/php5/cli/conf.d/30-phalcon.ini
+                  echo "extension=phalcon.so" >> /etc/php5/cli/conf.d/30-phalcon.ini
+
                   echo "Restarting required services..."
                   sudo service apache2 restart
                   sudo service php5-fpm restart
+
+                  cd /home/vagrant/phalcon; mkdir -p dev-tools; cd dev-tools;
+                  sudo git clone --depth=1 git://github.com/phalcon/phalcon-devtools.git ./
+                  alias phalcon="/home/vagrant/phalcon/phalcon-tools/phalcon.php"
 
                 fi;
 
