Routing and composer integration

--- a/api/public/composer.json
+++ b/api/public/composer.json
@@ -9,5 +9,15 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {},
+    "autoload": {
+        "psr-4": {
+            "setup\\": "app/setup",
+            "Api\\": "app/controllers/Api"
+
+        },
+        "classmap": [
+            "app/controllers"
+        ]
+    }
 }
