--- a/app/public/_scripts/package.json
+++ b/app/public/_scripts/package.json
@@ -20,6 +20,7 @@
     "babelify": "^7.2.0",
     "browser-sync": "^2.12.3",
     "browserify": "^13.0.0",
+    "director": "^1.2.8",
     "gulp": "^3.9.1",
     "gulp-eslint": "^2.0.0",
     "gulp-plumber": "^1.1.0",
