--- a/api/public/composer.json
+++ b/api/public/composer.json
@@ -9,5 +9,19 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+        "nesbot/carbon": "^1.21"
+    },
+    "autoload": {
+        "psr-4": {
+            "setup\\": "app/setup",
+            "Api\\": "app/controllers/Api",
+            "Models\\": "app/models",
+            "Services\\": "app/services",
+            "Helpers\\": "app/helpers"
+        },
+        "classmap": [
+            "app/controllers"
+        ]
+    }
 }
